feat: change font family svg and replace href / to #

--- a/app/src/components/sidebar/blocks/channels/channels.css
+++ b/app/src/components/sidebar/blocks/channels/channels.css
@@ -23,6 +23,7 @@
 .channels ul a{
     font-weight: 500;
     color: #666A70;
+    transition-duration: 0.3s;
 }
 
 .channels ul a span{ color: #919499 }
